# roboticarmproject

./: .gitignore  README.md  SYSTEM_SETUP.md  requirements.txt
arduino_firmware/robotic_arm_firmware/: robotic_arm_firmware.ino
ros2_workspace/src/robotic_arm_brain/: package.xml  setup.cfg  setup.py
ros2_workspace/src/robotic_arm_brain/robotic_arm_brain/: task_orchestrator_node.py
ros2_workspace/src/robotic_arm_bringup/: CMakeLists.txt  package.xml
ros2_workspace/src/robotic_arm_bringup/launch/: ai_full_system.launch.py  display.launch.py  manual_control.launch.py
ros2_workspace/src/robotic_arm_description/: CMakeLists.txt  package.xml
ros2_workspace/src/robotic_arm_description/meshes/: Arm 01.stl  Arm 01_1.stl  Arm 02 v3.stl  Arm 03.stl  Base.stl  Gear 1.stl  Gear 2.stl  Grip Link.stl  Gripper Base.stl  Gripper.stl  Servo Motor MG996R.stl  Servo Motor MG996R_1.stl  Servo Motor MG996R_2.stl  Servo Motor.stl  Waist.stl
ros2_workspace/src/robotic_arm_description/urdf/: arm_robot.urdf
ros2_workspace/src/robotic_arm_hardware/: package.xml  setup.cfg  setup.py
ros2_workspace/src/robotic_arm_hardware/robotic_arm_hardware/: serial_bridge_node.py
ros2_workspace/src/robotic_arm_moveit_config/: .setup_assistant  package.xml
ros2_workspace/src/robotic_arm_moveit_config/config/: arm_robot.ros2_control.xacro  arm_robot.srdf  arm_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2_workspace/src/robotic_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_workspace/src/robotic_arm_teleop/: package.xml  setup.cfg  setup.py
ros2_workspace/src/robotic_arm_teleop/robotic_arm_teleop/: gui_teleop_node.py
ros2_workspace/src/robotic_arm_vision/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_workspace/src/robotic_arm_vision/robotic_arm_vision/: vision_perception_node.py
ros2_workspace/src/robotic_arm_visualization/: CMakeLists.txt  package.xml
ros2_workspace/src/robotic_arm_visualization/rviz/: view_arm.rviz
standalone_gui/: dashboard.py
