<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_arm_bringup</name>
  <version>1.0.0</version>
  <description>
    Master Launch orchestration package. Integrates the MoveIt 2 Digital Twin, AI Vision, 
    Decision Brain, hardware serial communication, and visualization into the full autonomous system.
  </description>
  <maintainer email="wassefahmed883@gmail.com">Ahmed Wassef</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime packages composed by the launch files -->
  <exec_depend>robotic_arm_description</exec_depend>
  <exec_depend>robotic_arm_hardware</exec_depend>
  <exec_depend>robotic_arm_teleop</exec_depend>
  <exec_depend>robotic_arm_visualization</exec_depend>
  <exec_depend>robotic_arm_vision</exec_depend>
  <exec_depend>robotic_arm_brain</exec_depend>
  <exec_depend>robotic_arm_moveit_config</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
